--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<button id="sendButton">Send</button>
 			</div>
 		</div>
-		<img src="G:\Github ChatBot Project\Big Robot.png" alt="Robot cartoon" height="500vh">
+		<img src="Big Robot.png" alt="Robot cartoon" height="500vh">
 	</div>
 </body>
 <script type="text/javascript" src="index.js" ></script>
